Add CodeKit configs with updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 CNAME
 .DS_Store
-.codekit-cache
-config.codekit
-/bower_components
 /font-awesome
 /sass/.sass-cache
+# Allow CodeKit Configs
+# .codekit-cache
+# config.codekit
+# /bower_components
