--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ CNAME
 /font-awesome
 /sass/.sass-cache
 # Allow CodeKit Configs
-# .codekit-cache
+.codekit-cache
 # config.codekit
 # /bower_components
