--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "grunt-cache-breaker": "^2.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-jekyll": "^0.4.6",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^1.2.0",
-    "grunt-scss-lint": "^0.3.8"
+    "grunt-scss-lint": "^0.3.8",
+    "jquery.scrollto": "^2.1.2"
   }
 }
