--- a/src/templates/_data/contact.yml
+++ b/src/templates/_data/contact.yml
@@ -1,6 +1,8 @@
-github: https://github.com/toledowebprofessionals/
-twitter: https://twitter.com/twpmeetup
-linkedin: https://www.linkedin.com/groups/4874377
-facebook: https://www.facebook.com/toledowebprofessionals
-meetup: https://www.meetup.com/Toledo-Web-Professionals/
-email: twpmeetup@gmail.com
+options:
+  meetup: https://www.meetup.com/Toledo-Web-Professionals/
+  twitter: https://twitter.com/twpmeetup
+  facebook: https://www.facebook.com/toledowebprofessionals
+  linkedin: https://www.linkedin.com/groups/4874377
+  instagram: https://www.instagram.com/toledowebprofessionals/
+  github: https://github.com/toledowebprofessionals/
+  envelope: twpmeetup@gmail.com
