Fix the emails on homepage/sponsorship page.

--- a/src/templates/_data/contact.yml
+++ b/src/templates/_data/contact.yml
@@ -5,4 +5,4 @@ options:
   linkedin: https://www.linkedin.com/groups/4874377
   instagram: https://www.instagram.com/toledowebprofessionals/
   github: https://github.com/toledowebprofessionals/
-  envelope: twpmeetup@gmail.com
+  envelope: mailto:twpmeetup@gmail.com
